# lore-auth-oidc

./: .dockerignore  .env.example  .gitignore  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  docker-compose.yml  release-please-config.json
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-please.yml
docs/providers/: auth0.md  authentik.md  cognito.md  entra-id.md  keycloak.md  okta.md
docs/providers/compose/: auth0.yml  authentik.yml  cognito.yml  entra-id.yml  keycloak.yml  okta.yml
proto/: auth_api.proto
src/: config.rs  lib.rs  main.rs
src/auth/: jwt.rs  mod.rs  oidc.rs
src/grpc/: mod.rs  service.rs
src/http/: mod.rs  routes.rs
src/store/: memory.rs  mod.rs
