[package]
name = "lore-auth-oidc"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "OpenID Connect authentication adapter for Epic Games Lore"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
openidconnect = { version = "4", features = ["reqwest"] }
rand = "0.9"
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "sync"] }
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
